Version 4.2.5
- Added some more peephole optimizations

Version 4.2.4
- Added FVAR and FVARS for Spin2
- Fixed "-C" option for case sensitivity
- Fixed detection of result variables in inline asm (e.g. polxy builtin)
- Fixed handling of # at start of line in Spin CON blocks
- Fixed handling of some Spin1 only keywords and operators
- Fixed label detection on instructions like djnf
- Fixed Spin2 ENCOD operator
- Fixed a -O2 loop optimization bug which could lose assignments inside IF
- Implemented INPUT #n in BASIC
- Improved handling of structure returns in C
- Improved handling of passing methods as function pointers
- Made the ?: ternary operator parse better in Spin2
- Optimized P2 multiplication by constants
- Optimized bytefill/bytemove on P2
- Properly supported expressions on strings (like "abc"|m) in Spin

Version 4.2.3
- Fixed some spurious "duplicate case label" errors
- Added new cpuchk() and cpuwait() functions for BASIC
- Implemented cogchk() for P1
- Implemented many additional assignment operators for Spin2
- Fixed SCAS operator for Spin2
- Simplified and optimized P2 multiply routines
- Fixed identifier lookup inside ASM SHARED in BASIC
- Changed sub-module names to include the suffix (so foo.spin may
  include foo.c as an object, which will be named foo_c)
- Replaced runs of duplicate lines in listing file with "..."
- Optimized plain REPEAT in spin to use REP instruction on P2
- Fixed SEND of functions with no return values
- Fixed an alignment bug affecting LOOKUP/LOOKDOWN on P2

Version 4.2.2
- Added <>= operator for Spin
- Added getsec() and getrnd() builtins for Spin2 and BASIC
- Added _cnth() and _cnthl() functions for C
- Improved handling of serial input by providing an explicit timeout
- Fixed _reboot() function for P1
- Fixed serious problem with ASM CONST in BASIC
- Implemented use of MULS/MUL for 16 bit multiplies on P2

Version 4.2.1
- Fixed last minute bug in ORG/END which was causing it not to fcache