@@ -15,7 +15,21 @@ endmsg=$ok
 for i in error*.spin
 do
   j=`basename $i .spin`
-  $PROG --noheader -DCOUNT=4 $i >$j.err 2>&1
+  $PROG -Wall --noheader -DCOUNT=4 $i >$j.err 2>&1
+  if  diff -ub Expect/$j.err $j.err
+  then
+      rm -f $j.err
+      echo $j passed
+  else
+      echo $j failed
+      endmsg="TEST FAILURES"
+  fi
+done
+
+for i in error*.spin2
+do
+  j=`basename $i .spin2`
+  $PROG -Wall --noheader -DCOUNT=4 $i >$j.err 2>&1
   if  diff -ub Expect/$j.err $j.err
   then
       rm -f $j.err
@@ -29,7 +43,7 @@ done
 for i in error*.bas
 do
   j=`basename $i .bas`
-  $PROG --noheader -DCOUNT=4 $i >$j.err 2>&1
+  $PROG -Wall --noheader -DCOUNT=4 $i >$j.err 2>&1
   if  diff -ub Expect/$j.err $j.err
   then
       rm -f $j.err
