@@ -2133,6 +2133,9 @@ ProcessOneFunc(Function *pf)
         if (!pf->result_used) {
             pf->resultexpr = AstInteger(0);
             pf->result_used = 1;
+            if (sawreturn && pf->numresults > 0) {
+                LANGUAGE_WARNING(LANG_SPIN_SPIN2, pf->body, "function %s returns a value but was declared without a return variable", pf->name);
+            }
         }
         if (!sawreturn) {
             AST *retstmt;
