@@ -40,6 +40,7 @@ int gl_dat_offset = 0;
 int gl_infer_ctypes = 0;
 int gl_fixedreal = 0;
 const char *gl_intstring = "int32_t";
+int gl_warn_flags = 0;
 
 // dummy needed for some symbol lookups
 Module *GetTopLevelModule(void) {
